--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="ja">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitの勉強</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Gitのブランチを勉強しています。</h1>
-</body>
+  </body>
 </html>
